Moved Pipeline to the document store